fix height on mobile

--- a/src/app/resume/resume.component.css
+++ b/src/app/resume/resume.component.css
@@ -1,5 +1,5 @@
 .resume-image {
-  height: fit-content;
+  /* height: fit-content; */
   max-width: 150px; margin-left: auto; margin-right: auto;
 }
 
